[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "2.0.0-rc.38", features = [ 
    "sqlx-postgres", 
    "runtime-tokio-rustls", 
    "macros", 
    "with-chrono", 
    "with-uuid" 
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
argon2 = "0.6.0-rc.8" 
jsonwebtoken = "10.3"