[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc.38", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid" ] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
frost-ed25519 = "0.3.0" 
rand = "0.8"
hex = "0.4"
sea-query = "0.32"